// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`array.json - {"objectWrap":"collapse"} format 1`] = `
====================================options=====================================
objectWrap: "collapse"
parsers: ["json"]
                                                      printWidth: 80 (default) |
=====================================input======================================
[
  [
1,null],
  [1,null,],
  [null,],
  [0,],
  [false,],
  ['',]
]

=====================================output=====================================
[[1, null], [1, null], [null], [0], [false], [""]]

================================================================================
`;

exports[`array.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
[
  [
1,null],
  [1,null,],
  [null,],
  [0,],
  [false,],
  ['',]
]

=====================================output=====================================
[[1, null], [1, null], [null], [0], [false], [""]]

================================================================================
`;

exports[`array.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
[
  [
1,null],
  [1,null,],
  [null,],
  [0,],
  [false,],
  ['',]
]

=====================================output=====================================
[[1, null], [1, null], [null], [0], [false], [""]]

================================================================================
`;

exports[`array.json - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
[
  [
1,null],
  [1,null,],
  [null,],
  [0,],
  [false,],
  ['',]
]

=====================================output=====================================
[[1, null], [1, null], [null], [0], [false], [""]]

================================================================================
`;

exports[`array.json - {"trailingComma":"es5"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
[
  [
1,null],
  [1,null,],
  [null,],
  [0,],
  [false,],
  ['',]
]

=====================================output=====================================
[[1, null], [1, null], [null], [0], [false], [""]]

================================================================================
`;

exports[`array.json format 1`] = `
====================================options=====================================
parsers: ["json-stringify"]
                                                      printWidth: 80 (default) |
=====================================input======================================
[
  [
1,null],
  [1,null,],
  [null,],
  [0,],
  [false,],
  ['',]
]

=====================================output=====================================
[
  [
    1,
    null
  ],
  [
    1,
    null
  ],
  [
    null
  ],
  [
    0
  ],
  [
    false
  ],
  [
    ""
  ]
]

================================================================================
`;

exports[`boolean.json - {"objectWrap":"collapse"} format 1`] = `
====================================options=====================================
objectWrap: "collapse"
parsers: ["json"]
                                                      printWidth: 80 (default) |
=====================================input======================================
true

=====================================output=====================================
true

================================================================================
`;

exports[`boolean.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
true

=====================================output=====================================
true

================================================================================
`;

exports[`boolean.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
true

=====================================output=====================================
true

================================================================================
`;

exports[`boolean.json - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
true

=====================================output=====================================
true

================================================================================
`;

exports[`boolean.json - {"trailingComma":"es5"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
true

=====================================output=====================================
true

================================================================================
`;

exports[`boolean.json format 1`] = `
====================================options=====================================
parsers: ["json-stringify"]
                                                      printWidth: 80 (default) |
=====================================input======================================
true

=====================================output=====================================
true

================================================================================
`;

exports[`key-value.json - {"objectWrap":"collapse"} format 1`] = `
====================================options=====================================
objectWrap: "collapse"
parsers: ["json"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{
    "string": "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstring": "stringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring": "string"
}

=====================================output=====================================
{
  "string": "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring",
  "stringstringstringstringstringstringstringstring": "stringstringstringstringstringstringstringstring",
  "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring": "string"
}

================================================================================
`;

exports[`key-value.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
{
    "string": "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstring": "stringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring": "string"
}

=====================================output=====================================
{
  "string": "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring",
  "stringstringstringstringstringstringstringstring": "stringstringstringstringstringstringstringstring",
  "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring": "string"
}

================================================================================
`;

exports[`key-value.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
{
    "string": "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstring": "stringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring": "string"
}

=====================================output=====================================
{
  string: "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring",
  stringstringstringstringstringstringstringstring: "stringstringstringstringstringstringstringstring",
  stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring: "string",
}

================================================================================
`;

exports[`key-value.json - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
{
    "string": "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstring": "stringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring": "string"
}

=====================================output=====================================
{
  "string": "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring",
  "stringstringstringstringstringstringstringstring": "stringstringstringstringstringstringstringstring",
  "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring": "string"
}

================================================================================
`;

exports[`key-value.json - {"trailingComma":"es5"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
{
    "string": "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstring": "stringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring": "string"
}

=====================================output=====================================
{
  string: "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring",
  stringstringstringstringstringstringstringstring: "stringstringstringstringstringstringstringstring",
  stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring: "string",
}

================================================================================
`;

exports[`key-value.json format 1`] = `
====================================options=====================================
parsers: ["json-stringify"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{
    "string": "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstring": "stringstringstringstringstringstringstringstring",
    "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring": "string"
}

=====================================output=====================================
{
  "string": "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring",
  "stringstringstringstringstringstringstringstring": "stringstringstringstringstringstringstringstring",
  "stringstringstringstringstringstringstringstringstringstringstringstringstringstringstring": "string"
}

================================================================================
`;

exports[`multi-line.json - {"objectWrap":"collapse"} format 1`] = `
====================================options=====================================
objectWrap: "collapse"
parsers: ["json"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",
1e10,1e-3]}}

=====================================output=====================================
{ "key1": [true, false, null], "key2": { "key3": [1, 2, "3", 1e10, 1e-3] } }

================================================================================
`;

exports[`multi-line.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",
1e10,1e-3]}}

=====================================output=====================================
{ "key1": [true, false, null], "key2": { "key3": [1, 2, "3", 1e10, 1e-3] } }

================================================================================
`;

exports[`multi-line.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",
1e10,1e-3]}}

=====================================output=====================================
{ key1: [true, false, null], key2: { key3: [1, 2, "3", 1e10, 1e-3] } }

================================================================================
`;

exports[`multi-line.json - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",
1e10,1e-3]}}

=====================================output=====================================
{ "key1": [true, false, null], "key2": { "key3": [1, 2, "3", 1e10, 1e-3] } }

================================================================================
`;

exports[`multi-line.json - {"trailingComma":"es5"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",
1e10,1e-3]}}

=====================================output=====================================
{ key1: [true, false, null], key2: { key3: [1, 2, "3", 1e10, 1e-3] } }

================================================================================
`;

exports[`multi-line.json format 1`] = `
====================================options=====================================
parsers: ["json-stringify"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",
1e10,1e-3]}}

=====================================output=====================================
{
  "key1": [
    true,
    false,
    null
  ],
  "key2": {
    "key3": [
      1,
      2,
      "3",
      1e10,
      1e-3
    ]
  }
}

================================================================================
`;

exports[`null.json - {"objectWrap":"collapse"} format 1`] = `
====================================options=====================================
objectWrap: "collapse"
parsers: ["json"]
                                                      printWidth: 80 (default) |
=====================================input======================================
null

=====================================output=====================================
null

================================================================================
`;

exports[`null.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
null

=====================================output=====================================
null

================================================================================
`;

exports[`null.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
null

=====================================output=====================================
null

================================================================================
`;

exports[`null.json - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
null

=====================================output=====================================
null

================================================================================
`;

exports[`null.json - {"trailingComma":"es5"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
null

=====================================output=====================================
null

================================================================================
`;

exports[`null.json format 1`] = `
====================================options=====================================
parsers: ["json-stringify"]
                                                      printWidth: 80 (default) |
=====================================input======================================
null

=====================================output=====================================
null

================================================================================
`;

exports[`number.json - {"objectWrap":"collapse"} format 1`] = `
====================================options=====================================
objectWrap: "collapse"
parsers: ["json"]
                                                      printWidth: 80 (default) |
=====================================input======================================
0

=====================================output=====================================
0

================================================================================
`;

exports[`number.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
0

=====================================output=====================================
0

================================================================================
`;

exports[`number.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
0

=====================================output=====================================
0

================================================================================
`;

exports[`number.json - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
0

=====================================output=====================================
0

================================================================================
`;

exports[`number.json - {"trailingComma":"es5"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
0

=====================================output=====================================
0

================================================================================
`;

exports[`number.json format 1`] = `
====================================options=====================================
parsers: ["json-stringify"]
                                                      printWidth: 80 (default) |
=====================================input======================================
0

=====================================output=====================================
0

================================================================================
`;

exports[`pass1.json - {"objectWrap":"collapse"} format 1`] = `
====================================options=====================================
objectWrap: "collapse"
parsers: ["json"]
                                                      printWidth: 80 (default) |
=====================================input======================================
[
    "JSON Test Pattern pass1",
    {"object with 1 member":["array with 1 element"]},
    {},
    [],
    -42,
    true,
    false,
    null,
    {
        "integer": 1234567890,
        "real": -9876.543210,
        "e": 0.123456789e-12,
        "E": 1.234567890E+34,
        "":  23456789012E66,
        "zero": 0,
        "one": 1,
        "space": " ",
        "quote": "\\"",
        "backslash": "\\\\",
        "controls": "\\b\\f\\n\\r\\t",
        "slash": "/ & \\/",
        "alpha": "abcdefghijklmnopqrstuvwyz",
        "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
        "digit": "0123456789",
        "0123456789": "digit",
        "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
        "hex": "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
        "true": true,
        "false": false,
        "null": null,
        "array":[  ],
        "object":{  },
        "address": "50 St. James Street",
        "url": "http://www.JSON.org/",
        "comment": "// /* <!-- --",
        "# -- --> */": " ",
        " s p a c e d " :[1,2 , 3

,

4 , 5        ,          6           ,7        ],"compact":[1,2,3,4,5,6,7],
        "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
        "quotes": "&#34; \\u0022 %22 0x22 034 &#x22;",
        "\\/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?"
: "A key can be any string"
    },
    0.5 ,98.6
,
99.44
,

1066,
1e1,
0.1e1,
1e-1,
1e00,2e+00,2e-00
,"rosebud"]

=====================================output=====================================
[
  "JSON Test Pattern pass1",
  { "object with 1 member": ["array with 1 element"] },
  {},
  [],
  -42,
  true,
  false,
  null,
  {
    "integer": 1234567890,
    "real": -9876.54321,
    "e": 0.123456789e-12,
    "E": 1.23456789e34,
    "": 23456789012e66,
    "zero": 0,
    "one": 1,
    "space": " ",
    "quote": "\\"",
    "backslash": "\\\\",
    "controls": "\\b\\f\\n\\r\\t",
    "slash": "/ & \\/",
    "alpha": "abcdefghijklmnopqrstuvwyz",
    "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
    "digit": "0123456789",
    "0123456789": "digit",
    "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
    "hex": "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
    "true": true,
    "false": false,
    "null": null,
    "array": [],
    "object": {},
    "address": "50 St. James Street",
    "url": "http://www.JSON.org/",
    "comment": "// /* <!-- --",
    "# -- --> */": " ",
    " s p a c e d ": [
      1, 2, 3,

      4, 5, 6, 7
    ],
    "compact": [1, 2, 3, 4, 5, 6, 7],
    "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
    "quotes": "&#34; \\u0022 %22 0x22 034 &#x22;",
    "\\/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?": "A key can be any string"
  },
  0.5,
  98.6,
  99.44,

  1066,
  1e1,
  0.1e1,
  1e-1,
  1,
  2,
  2,
  "rosebud"
]

================================================================================
`;

exports[`pass1.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
[
    "JSON Test Pattern pass1",
    {"object with 1 member":["array with 1 element"]},
    {},
    [],
    -42,
    true,
    false,
    null,
    {
        "integer": 1234567890,
        "real": -9876.543210,
        "e": 0.123456789e-12,
        "E": 1.234567890E+34,
        "":  23456789012E66,
        "zero": 0,
        "one": 1,
        "space": " ",
        "quote": "\\"",
        "backslash": "\\\\",
        "controls": "\\b\\f\\n\\r\\t",
        "slash": "/ & \\/",
        "alpha": "abcdefghijklmnopqrstuvwyz",
        "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
        "digit": "0123456789",
        "0123456789": "digit",
        "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
        "hex": "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
        "true": true,
        "false": false,
        "null": null,
        "array":[  ],
        "object":{  },
        "address": "50 St. James Street",
        "url": "http://www.JSON.org/",
        "comment": "// /* <!-- --",
        "# -- --> */": " ",
        " s p a c e d " :[1,2 , 3

,

4 , 5        ,          6           ,7        ],"compact":[1,2,3,4,5,6,7],
        "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
        "quotes": "&#34; \\u0022 %22 0x22 034 &#x22;",
        "\\/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?"
: "A key can be any string"
    },
    0.5 ,98.6
,
99.44
,

1066,
1e1,
0.1e1,
1e-1,
1e00,2e+00,2e-00
,"rosebud"]

=====================================output=====================================
[
  "JSON Test Pattern pass1",
  { "object with 1 member": ["array with 1 element"] },
  {},
  [],
  -42,
  true,
  false,
  null,
  {
    "integer": 1234567890,
    "real": -9876.54321,
    "e": 0.123456789e-12,
    "E": 1.23456789e34,
    "": 23456789012e66,
    "zero": 0,
    "one": 1,
    "space": " ",
    "quote": "\\"",
    "backslash": "\\\\",
    "controls": "\\b\\f\\n\\r\\t",
    "slash": "/ & \\/",
    "alpha": "abcdefghijklmnopqrstuvwyz",
    "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
    "digit": "0123456789",
    "0123456789": "digit",
    "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
    "hex": "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
    "true": true,
    "false": false,
    "null": null,
    "array": [],
    "object": {},
    "address": "50 St. James Street",
    "url": "http://www.JSON.org/",
    "comment": "// /* <!-- --",
    "# -- --> */": " ",
    " s p a c e d ": [
      1, 2, 3,

      4, 5, 6, 7
    ],
    "compact": [1, 2, 3, 4, 5, 6, 7],
    "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
    "quotes": "&#34; \\u0022 %22 0x22 034 &#x22;",
    "\\/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?": "A key can be any string"
  },
  0.5,
  98.6,
  99.44,

  1066,
  1e1,
  0.1e1,
  1e-1,
  1,
  2,
  2,
  "rosebud"
]

================================================================================
`;

exports[`pass1.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
[
    "JSON Test Pattern pass1",
    {"object with 1 member":["array with 1 element"]},
    {},
    [],
    -42,
    true,
    false,
    null,
    {
        "integer": 1234567890,
        "real": -9876.543210,
        "e": 0.123456789e-12,
        "E": 1.234567890E+34,
        "":  23456789012E66,
        "zero": 0,
        "one": 1,
        "space": " ",
        "quote": "\\"",
        "backslash": "\\\\",
        "controls": "\\b\\f\\n\\r\\t",
        "slash": "/ & \\/",
        "alpha": "abcdefghijklmnopqrstuvwyz",
        "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
        "digit": "0123456789",
        "0123456789": "digit",
        "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
        "hex": "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
        "true": true,
        "false": false,
        "null": null,
        "array":[  ],
        "object":{  },
        "address": "50 St. James Street",
        "url": "http://www.JSON.org/",
        "comment": "// /* <!-- --",
        "# -- --> */": " ",
        " s p a c e d " :[1,2 , 3

,

4 , 5        ,          6           ,7        ],"compact":[1,2,3,4,5,6,7],
        "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
        "quotes": "&#34; \\u0022 %22 0x22 034 &#x22;",
        "\\/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?"
: "A key can be any string"
    },
    0.5 ,98.6
,
99.44
,

1066,
1e1,
0.1e1,
1e-1,
1e00,2e+00,2e-00
,"rosebud"]

=====================================output=====================================
[
  "JSON Test Pattern pass1",
  { "object with 1 member": ["array with 1 element"] },
  {},
  [],
  -42,
  true,
  false,
  null,
  {
    integer: 1234567890,
    real: -9876.54321,
    e: 0.123456789e-12,
    E: 1.23456789e34,
    "": 23456789012e66,
    zero: 0,
    one: 1,
    space: " ",
    quote: '"',
    backslash: "\\\\",
    controls: "\\b\\f\\n\\r\\t",
    slash: "/ & \\/",
    alpha: "abcdefghijklmnopqrstuvwyz",
    ALPHA: "ABCDEFGHIJKLMNOPQRSTUVWYZ",
    digit: "0123456789",
    "0123456789": "digit",
    special: "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
    hex: "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
    true: true,
    false: false,
    null: null,
    array: [],
    object: {},
    address: "50 St. James Street",
    url: "http://www.JSON.org/",
    comment: "// /* <!-- --",
    "# -- --> */": " ",
    " s p a c e d ": [
      1, 2, 3,

      4, 5, 6, 7,
    ],
    compact: [1, 2, 3, 4, 5, 6, 7],
    jsontext: '{"object with 1 member":["array with 1 element"]}',
    quotes: "&#34; \\u0022 %22 0x22 034 &#x22;",
    "\\/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?": "A key can be any string",
  },
  0.5,
  98.6,
  99.44,

  1066,
  1e1,
  0.1e1,
  1e-1,
  1,
  2,
  2,
  "rosebud",
]

================================================================================
`;

exports[`pass1.json - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
[
    "JSON Test Pattern pass1",
    {"object with 1 member":["array with 1 element"]},
    {},
    [],
    -42,
    true,
    false,
    null,
    {
        "integer": 1234567890,
        "real": -9876.543210,
        "e": 0.123456789e-12,
        "E": 1.234567890E+34,
        "":  23456789012E66,
        "zero": 0,
        "one": 1,
        "space": " ",
        "quote": "\\"",
        "backslash": "\\\\",
        "controls": "\\b\\f\\n\\r\\t",
        "slash": "/ & \\/",
        "alpha": "abcdefghijklmnopqrstuvwyz",
        "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
        "digit": "0123456789",
        "0123456789": "digit",
        "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
        "hex": "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
        "true": true,
        "false": false,
        "null": null,
        "array":[  ],
        "object":{  },
        "address": "50 St. James Street",
        "url": "http://www.JSON.org/",
        "comment": "// /* <!-- --",
        "# -- --> */": " ",
        " s p a c e d " :[1,2 , 3

,

4 , 5        ,          6           ,7        ],"compact":[1,2,3,4,5,6,7],
        "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
        "quotes": "&#34; \\u0022 %22 0x22 034 &#x22;",
        "\\/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?"
: "A key can be any string"
    },
    0.5 ,98.6
,
99.44
,

1066,
1e1,
0.1e1,
1e-1,
1e00,2e+00,2e-00
,"rosebud"]

=====================================output=====================================
[
  "JSON Test Pattern pass1",
  { "object with 1 member": ["array with 1 element"] },
  {},
  [],
  -42,
  true,
  false,
  null,
  {
    "integer": 1234567890,
    "real": -9876.54321,
    "e": 0.123456789e-12,
    "E": 1.23456789e34,
    "": 23456789012e66,
    "zero": 0,
    "one": 1,
    "space": " ",
    "quote": "\\"",
    "backslash": "\\\\",
    "controls": "\\b\\f\\n\\r\\t",
    "slash": "/ & \\/",
    "alpha": "abcdefghijklmnopqrstuvwyz",
    "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
    "digit": "0123456789",
    "0123456789": "digit",
    "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
    "hex": "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
    "true": true,
    "false": false,
    "null": null,
    "array": [],
    "object": {},
    "address": "50 St. James Street",
    "url": "http://www.JSON.org/",
    "comment": "// /* <!-- --",
    "# -- --> */": " ",
    " s p a c e d ": [
      1, 2, 3,

      4, 5, 6, 7
    ],
    "compact": [1, 2, 3, 4, 5, 6, 7],
    "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
    "quotes": "&#34; \\u0022 %22 0x22 034 &#x22;",
    "\\/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?": "A key can be any string"
  },
  0.5,
  98.6,
  99.44,

  1066,
  1e1,
  0.1e1,
  1e-1,
  1,
  2,
  2,
  "rosebud"
]

================================================================================
`;

exports[`pass1.json - {"trailingComma":"es5"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
[
    "JSON Test Pattern pass1",
    {"object with 1 member":["array with 1 element"]},
    {},
    [],
    -42,
    true,
    false,
    null,
    {
        "integer": 1234567890,
        "real": -9876.543210,
        "e": 0.123456789e-12,
        "E": 1.234567890E+34,
        "":  23456789012E66,
        "zero": 0,
        "one": 1,
        "space": " ",
        "quote": "\\"",
        "backslash": "\\\\",
        "controls": "\\b\\f\\n\\r\\t",
        "slash": "/ & \\/",
        "alpha": "abcdefghijklmnopqrstuvwyz",
        "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
        "digit": "0123456789",
        "0123456789": "digit",
        "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
        "hex": "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
        "true": true,
        "false": false,
        "null": null,
        "array":[  ],
        "object":{  },
        "address": "50 St. James Street",
        "url": "http://www.JSON.org/",
        "comment": "// /* <!-- --",
        "# -- --> */": " ",
        " s p a c e d " :[1,2 , 3

,

4 , 5        ,          6           ,7        ],"compact":[1,2,3,4,5,6,7],
        "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
        "quotes": "&#34; \\u0022 %22 0x22 034 &#x22;",
        "\\/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?"
: "A key can be any string"
    },
    0.5 ,98.6
,
99.44
,

1066,
1e1,
0.1e1,
1e-1,
1e00,2e+00,2e-00
,"rosebud"]

=====================================output=====================================
[
  "JSON Test Pattern pass1",
  { "object with 1 member": ["array with 1 element"] },
  {},
  [],
  -42,
  true,
  false,
  null,
  {
    integer: 1234567890,
    real: -9876.54321,
    e: 0.123456789e-12,
    E: 1.23456789e34,
    "": 23456789012e66,
    zero: 0,
    one: 1,
    space: " ",
    quote: '"',
    backslash: "\\\\",
    controls: "\\b\\f\\n\\r\\t",
    slash: "/ & \\/",
    alpha: "abcdefghijklmnopqrstuvwyz",
    ALPHA: "ABCDEFGHIJKLMNOPQRSTUVWYZ",
    digit: "0123456789",
    "0123456789": "digit",
    special: "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
    hex: "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
    true: true,
    false: false,
    null: null,
    array: [],
    object: {},
    address: "50 St. James Street",
    url: "http://www.JSON.org/",
    comment: "// /* <!-- --",
    "# -- --> */": " ",
    " s p a c e d ": [
      1, 2, 3,

      4, 5, 6, 7,
    ],
    compact: [1, 2, 3, 4, 5, 6, 7],
    jsontext: '{"object with 1 member":["array with 1 element"]}',
    quotes: "&#34; \\u0022 %22 0x22 034 &#x22;",
    "\\/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?": "A key can be any string",
  },
  0.5,
  98.6,
  99.44,

  1066,
  1e1,
  0.1e1,
  1e-1,
  1,
  2,
  2,
  "rosebud",
]

================================================================================
`;

exports[`pass1.json format 1`] = `
====================================options=====================================
parsers: ["json-stringify"]
                                                      printWidth: 80 (default) |
=====================================input======================================
[
    "JSON Test Pattern pass1",
    {"object with 1 member":["array with 1 element"]},
    {},
    [],
    -42,
    true,
    false,
    null,
    {
        "integer": 1234567890,
        "real": -9876.543210,
        "e": 0.123456789e-12,
        "E": 1.234567890E+34,
        "":  23456789012E66,
        "zero": 0,
        "one": 1,
        "space": " ",
        "quote": "\\"",
        "backslash": "\\\\",
        "controls": "\\b\\f\\n\\r\\t",
        "slash": "/ & \\/",
        "alpha": "abcdefghijklmnopqrstuvwyz",
        "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
        "digit": "0123456789",
        "0123456789": "digit",
        "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
        "hex": "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
        "true": true,
        "false": false,
        "null": null,
        "array":[  ],
        "object":{  },
        "address": "50 St. James Street",
        "url": "http://www.JSON.org/",
        "comment": "// /* <!-- --",
        "# -- --> */": " ",
        " s p a c e d " :[1,2 , 3

,

4 , 5        ,          6           ,7        ],"compact":[1,2,3,4,5,6,7],
        "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
        "quotes": "&#34; \\u0022 %22 0x22 034 &#x22;",
        "\\/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?"
: "A key can be any string"
    },
    0.5 ,98.6
,
99.44
,

1066,
1e1,
0.1e1,
1e-1,
1e00,2e+00,2e-00
,"rosebud"]

=====================================output=====================================
[
  "JSON Test Pattern pass1",
  {
    "object with 1 member": [
      "array with 1 element"
    ]
  },
  {},
  [],
  -42,
  true,
  false,
  null,
  {
    "integer": 1234567890,
    "real": -9876.543210,
    "e": 0.123456789e-12,
    "E": 1.234567890E+34,
    "": 23456789012E66,
    "zero": 0,
    "one": 1,
    "space": " ",
    "quote": "\\"",
    "backslash": "\\\\",
    "controls": "\\b\\f\\n\\r\\t",
    "slash": "/ & \\/",
    "alpha": "abcdefghijklmnopqrstuvwyz",
    "ALPHA": "ABCDEFGHIJKLMNOPQRSTUVWYZ",
    "digit": "0123456789",
    "0123456789": "digit",
    "special": "\`1~!@#$%^&*()_+-={':[,]}|;.</>?",
    "hex": "\\u0123\\u4567\\u89AB\\uCDEF\\uabcd\\uef4A",
    "true": true,
    "false": false,
    "null": null,
    "array": [],
    "object": {},
    "address": "50 St. James Street",
    "url": "http://www.JSON.org/",
    "comment": "// /* <!-- --",
    "# -- --> */": " ",
    " s p a c e d ": [
      1,
      2,
      3,
      4,
      5,
      6,
      7
    ],
    "compact": [
      1,
      2,
      3,
      4,
      5,
      6,
      7
    ],
    "jsontext": "{\\"object with 1 member\\":[\\"array with 1 element\\"]}",
    "quotes": "&#34; \\u0022 %22 0x22 034 &#x22;",
    "\\/\\\\\\"\\uCAFE\\uBABE\\uAB98\\uFCDE\\ubcda\\uef4A\\b\\f\\n\\r\\t\`1~!@#$%^&*()_+-=[]{}|;:',./<>?": "A key can be any string"
  },
  0.5,
  98.6,
  99.44,
  1066,
  1e1,
  0.1e1,
  1e-1,
  1e00,
  2e+00,
  2e-00,
  "rosebud"
]

================================================================================
`;

exports[`single-line.json - {"objectWrap":"collapse"} format 1`] = `
====================================options=====================================
objectWrap: "collapse"
parsers: ["json"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",1e10,1e-3]}}

=====================================output=====================================
{ "key1": [true, false, null], "key2": { "key3": [1, 2, "3", 1e10, 1e-3] } }

================================================================================
`;

exports[`single-line.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",1e10,1e-3]}}

=====================================output=====================================
{ "key1": [true, false, null], "key2": { "key3": [1, 2, "3", 1e10, 1e-3] } }

================================================================================
`;

exports[`single-line.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",1e10,1e-3]}}

=====================================output=====================================
{ key1: [true, false, null], key2: { key3: [1, 2, "3", 1e10, 1e-3] } }

================================================================================
`;

exports[`single-line.json - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",1e10,1e-3]}}

=====================================output=====================================
{ "key1": [true, false, null], "key2": { "key3": [1, 2, "3", 1e10, 1e-3] } }

================================================================================
`;

exports[`single-line.json - {"trailingComma":"es5"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",1e10,1e-3]}}

=====================================output=====================================
{ key1: [true, false, null], key2: { key3: [1, 2, "3", 1e10, 1e-3] } }

================================================================================
`;

exports[`single-line.json format 1`] = `
====================================options=====================================
parsers: ["json-stringify"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",1e10,1e-3]}}

=====================================output=====================================
{
  "key1": [
    true,
    false,
    null
  ],
  "key2": {
    "key3": [
      1,
      2,
      "3",
      1e10,
      1e-3
    ]
  }
}

================================================================================
`;

exports[`single-quote.json - {"objectWrap":"collapse"} format 1`] = `
====================================options=====================================
objectWrap: "collapse"
parsers: ["json"]
                                                      printWidth: 80 (default) |
=====================================input======================================
'hello'

=====================================output=====================================
"hello"

================================================================================
`;

exports[`single-quote.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
'hello'

=====================================output=====================================
"hello"

================================================================================
`;

exports[`single-quote.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
'hello'

=====================================output=====================================
"hello"

================================================================================
`;

exports[`single-quote.json - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
'hello'

=====================================output=====================================
"hello"

================================================================================
`;

exports[`single-quote.json - {"trailingComma":"es5"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
'hello'

=====================================output=====================================
"hello"

================================================================================
`;

exports[`single-quote.json format 1`] = `
====================================options=====================================
parsers: ["json-stringify"]
                                                      printWidth: 80 (default) |
=====================================input======================================
'hello'

=====================================output=====================================
"hello"

================================================================================
`;

exports[`string.json - {"objectWrap":"collapse"} format 1`] = `
====================================options=====================================
objectWrap: "collapse"
parsers: ["json"]
                                                      printWidth: 80 (default) |
=====================================input======================================
"string"

=====================================output=====================================
"string"

================================================================================
`;

exports[`string.json - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
"string"

=====================================output=====================================
"string"

================================================================================
`;

exports[`string.json - {"trailingComma":"all"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
"string"

=====================================output=====================================
"string"

================================================================================
`;

exports[`string.json - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["json"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
"string"

=====================================output=====================================
"string"

================================================================================
`;

exports[`string.json - {"trailingComma":"es5"} format 2`] = `
====================================options=====================================
parsers: ["json5"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
"string"

=====================================output=====================================
"string"

================================================================================
`;

exports[`string.json format 1`] = `
====================================options=====================================
parsers: ["json-stringify"]
                                                      printWidth: 80 (default) |
=====================================input======================================
"string"

=====================================output=====================================
"string"

================================================================================
`;
